--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8" />
     <title>屬於妳的專屬驚喜</title>
     <style>
-        body { font-family: "微軟正黑體", sans-serif; background-color: #fce4ec; text-align: center; padding-top: 100px; }
+        body { 
+            font-family: "微軟正黑體", sans-serif; 
+            background-color: #fce4ec; 
+            text-align: center; 
+            padding-top: 100px; 
+            font-size: 36px; 
+        }
         #passwordPage, #surprisePage { display: none; }
         h1 { color: #c2185b; }
-        input { padding: 10px; font-size: 16px; }
-        button { padding: 10px 20px; font-size: 16px; background-color: #f06292; color: white; border: none; border-radius: 5px; cursor: pointer; }
+        input { padding: 15px; font-size: 36px; width: 300px; }
+        button { 
+            padding: 15px 40px; 
+            font-size: 36px; 
+            background-color: #f06292; 
+            color: white; 
+            border: none; 
+            border-radius: 5px; 
+            cursor: pointer; 
+        }
         .fade-in { opacity: 0; animation: fadeIn 2s ease-in forwards; }
         @keyframes fadeIn { to { opacity: 1; } }
-        .heart { font-size: 30px; animation: bounce 1s infinite; }
+        .heart { font-size: 50px; animation: bounce 1s infinite; }
         @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
     </style>
 </head>
@@ -29,7 +43,7 @@
         <h1 class="fade-in">給今天要上小夜的妳，加油喔!!!</h1>
         <p class="fade-in">屬於理工男的浪漫~~<span class="heart">❤️</span></p>
         <div class="fade-in">
-            <iframe width="300" height="169" src="https://www.youtube.com/embed/bu7nU9Mhpyo?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <iframe id="musicIframe" width="560" height="315" src="https://www.youtube.com/embed/DY2eiv9rHF4?autoplay=1&mute=1&controls=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
 
